# zego

./: .gitignore  LICENSE  README.md  west.yml
.github/actions/ncs-setup/: action.yml
.github/workflows/: build.yml  ci.yml  release.yml  validation.yml
bricks/button/: Kconfig
bricks/button/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.conf
bricks/button/src/: button.c  button.h  button_hw.h  button_hw_dk.c  button_hw_gpio.c
bricks/led/: CMakeLists.txt  Kconfig
bricks/led/boards/: nrf7002dk_nrf5340_cpuapp.conf
bricks/led/docs/: led-spec.md
bricks/led/sample/: CMakeLists.txt  prj.conf
bricks/led/src/: led.c  led.h
bricks/led/zephyr/: module.yml
bricks/memonitor/: CMakeLists.txt  Kconfig
bricks/memonitor/docs/: memonitor-spec.md
bricks/memonitor/src/: memonitor.c  memonitor.h
bricks/memonitor/zephyr/: module.yml
bricks/network/: CMakeLists.txt  Kconfig  Kconfig.defaults
bricks/network/docs/: network-spec.md
bricks/network/src/: mdns.c  net_event_mgmt.c  net_event_mgmt.h  wifi_utils.c  wifi_utils.h
bricks/ntp/: CMakeLists.txt  Kconfig
bricks/ntp/docs/: ntp-spec.md
bricks/ntp/src/: ntp.c  ntp.h
bricks/ntp/zephyr/: module.yml
bricks/ux/: CMakeLists.txt  Kconfig
bricks/ux/docs/: ux-spec.md
bricks/ux/src/: ux.c  ux.h
bricks/ux/zephyr/: module.yml
bricks/wifi/: CMakeLists.txt  Kconfig
bricks/wifi/docs/: wifi-spec.md
bricks/wifi/src/: console.h  wifi.c  wifi.h  wifi_mode_selector.c
bricks/wifi_ble_prov/: Kconfig  Kconfig.defaults
bricks/wifi_ble_prov/docs/: wifi-ble-prov-spec.md
bricks/wifi_ble_prov/src/: wifi_ble_prov.c  wifi_ble_prov.h
bricks/wifi_ble_prov/zephyr/: module.yml
button/: CMakeLists.txt  Kconfig
button/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.conf
button/docs/: button-spec.md
button/sample/: README.md  prj.conf
button/src/: button.c  button.h
button/test/: CMakeLists.txt  prj.conf  testcase.yaml
docs/: migration.md
led/: CMakeLists.txt  Kconfig
led/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.conf
led/docs/: led-spec.md
led/sample/: README.md
led/src/: led.c  led.h  led_hw.h  led_hw_dk.c  led_hw_zephyr.c
led/test/: CMakeLists.txt  prj.conf  testcase.yaml
modules/: CMakeLists.txt  Kconfig
modules/button/: CMakeLists.txt  Kconfig  Kconfig.zego_button
modules/button/docs/: button-spec.md
modules/button/sample/: CMakeLists.txt  README.md
modules/button/sample/boards/: nrf5340_audio_dk_nrf5340_cpuapp.conf
modules/button/zephyr/: module.yml
modules/led/: CMakeLists.txt  Kconfig  Kconfig.zego_led
modules/led/docs/: led-spec.md
modules/led/sample/: README.md  prj.conf
modules/led/sample/boards/: nrf54lm20dk_nrf54lm20a_cpuapp.conf
modules/led/src/: led.c  led.h
modules/network/: CMakeLists.txt  Kconfig.zego_network
modules/network/docs/: network-spec.md
modules/network/src/: net_event_mgmt.c  net_event_mgmt.h  wifi_utils.c  wifi_utils.h
modules/wifi/: CMakeLists.txt  Kconfig
modules/wifi/docs/: wifi-spec.md
modules/wifi/src/: wifi.c  wifi_mode_selector.c
modules/wifi_ble_prov/docs/: wifi-ble-prov-spec.md
modules/wifi_ble_prov/src/: wifi_ble_prov.c
network/: CMakeLists.txt  Kconfig  Kconfig.defaults
network/docs/: network-spec.md
network/src/: wifi_utils.h
network/zephyr/: module.yml
nordic-wifi-app-template/: CMakeLists.txt  Kconfig  README.md  overlay-nrf5340-wifi-ble-prov.conf  prj.conf  sysbuild.conf  west.yml
nordic-wifi-app-template/boards/: nrf5340_audio_dk_nrf5340_cpuapp.conf  nrf5340_audio_dk_nrf5340_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.conf
nordic-wifi-app-template/docs/: zview_report.txt
nordic-wifi-app-template/docs/dev-specs/: 0-overview.md  1-architecture.md  architecture.md  overview.md  ux-module.md  ux.md
nordic-wifi-app-template/docs/pm-prd/: PRD.md
nordic-wifi-app-template/docs/qa-test/: VALIDATION_PLAN.md  VALIDATION_REPORT.md  VERIFICATION-2026-06-05-09-54.md  VERIFICATION-2026-06-16-13-14.md  VERIFICATION-2026-06-29-22-47.md  VERIFICATION-2026-06-30-13-34.md  VERIFICATION-2026-07-01-11-23.md
nordic-wifi-app-template/src/: main.c
nordic-wifi-app-template/src/modules/: messages.h
nordic-wifi-app-template/src/modules/network/: net_event_app.c  net_event_mgmt_app.c
nordic-wifi-app-template/src/modules/ux/: CMakeLists.txt  Kconfig  ux.c
nordic-wifi-app-template/sysbuild/hci_ipc/: prj.conf
nordic-wifi-app-template/sysbuild/hci_ipc/boards/: nrf5340_audio_dk_nrf5340_cpunet.conf  nrf7002dk_nrf5340_cpunet.conf
patches/nrf_security/: 0001-forward-mbedtls-memory-debug.patch  README.md
wifi/: CMakeLists.txt  Kconfig
wifi/docs/: wifi-spec.md
wifi/src/: wifi.c  wifi.h  wifi_mode_selector.c
wifi/zephyr/: module.yml
wifi_ble_prov/: CMakeLists.txt  Kconfig  Kconfig.defaults
wifi_ble_prov/docs/: wifi-ble-prov-spec.md
wifi_ble_prov/src/: wifi_ble_prov.c  wifi_ble_prov.h
(+11 files in other folders)
